--- a/index.html
+++ b/index.html
@@ -2,7 +2,114 @@
 <meta charset="utf-8">
 <title>Nutrition Composition Dashboard</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
-<body>
+  <body>
+    <header class="page-header">
+      <div class="inner">
+        <h1>Nutrition Composition Dashboard</h1>
+        <p class="subtitle">
+          Explore calories, protein, fat, and carbohydrates across 335 common foods.
+          Use the controls to filter categories, brush the scatterplot, and compare nutrient bars.
+        </p>
+        <p class="meta">
+          Dataset:
+          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods" target="_blank">
+            Nutrition Details for Most Common Foods (Kaggle)
+          </a>
+        </p>
+      </div>
+    </header>
+
+    <main class="page-main">
+      <div class="inner">
+        <!-- 这里是 Observable 的 dashboard 容器 -->
+        <div id="dashboard"></div>
+      </div>
+    </main>
+
+    <footer class="page-footer">
+      <div class="inner">
+        <p>Built by Bella Cai for InfoVis Final Project.</p>
+      </div>
+    </footer>
+
+    <script type="module" src="./index.js"></script>
+  </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Nutrition Composition Dashboard</title>
+    <link rel="stylesheet" href="./inspector.css" />
+    <style>
+      :root {
+        --bg: #f5f5f7;
+        --card-bg: #ffffff;
+        --border-radius: 8px;
+        --shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+        --text-color: #222;
+        --muted: #666;
+        --accent: #2b7fc3;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        background: var(--bg);
+        color: var(--text-color);
+      }
+
+      .inner {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 16px 24px;
+      }
+
+      .page-header {
+        background: var(--card-bg);
+        box-shadow: var(--shadow);
+        margin-bottom: 24px;
+      }
+
+      .page-header h1 {
+        margin: 0 0 8px;
+        font-size: 28px;
+      }
+
+      .subtitle {
+        margin: 0 0 6px;
+        color: var(--muted);
+      }
+
+      .meta {
+        margin: 0;
+        font-size: 13px;
+        color: var(--muted);
+      }
+
+      .meta a {
+        color: var(--accent);
+        text-decoration: none;
+      }
+
+      .page-main {
+        padding-bottom: 40px;
+      }
+
+      .page-footer {
+        border-top: 1px solid #e0e0e0;
+        background: #fafafa;
+      }
+
+      .page-footer p {
+        margin: 8px 0;
+        font-size: 12px;
+        color: #888;
+      }
+    </style>
+  </head>
+
 <script type="module">
 
 import define from "./index.js";
