--- a/index.html
+++ b/index.html
@@ -1,42 +1,9 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>Nutrition Composition Dashboard</title>
-<link rel="stylesheet" type="text/css" href="./inspector.css">
-  <body>
-    <header class="page-header">
-      <div class="inner">
-        <h1>Nutrition Composition Dashboard</h1>
-        <p class="subtitle">
-          Explore calories, protein, fat, and carbohydrates across 335 common foods.
-          Use the controls to filter categories, brush the scatterplot, and compare nutrient bars.
-        </p>
-        <p class="meta">
-          Dataset:
-          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods" target="_blank">
-            Nutrition Details for Most Common Foods (Kaggle)
-          </a>
-        </p>
-      </div>
-    </header>
-
-    <main class="page-main">
-      <div class="inner">
-        <!-- 这里是 Observable 的 dashboard 容器 -->
-        <div id="dashboard"></div>
-      </div>
-    </main>
-
-    <footer class="page-footer">
-      <div class="inner">
-        <p>Built by Bella Cai for InfoVis Final Project.</p>
-      </div>
-    </footer>
-
-    <script type="module" src="./index.js"></script>
-  </body>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Nutrition Composition Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./inspector.css" />
     <style>
       :root {
@@ -48,74 +15,94 @@
         --muted: #666;
         --accent: #2b7fc3;
       }
-
       * {
         box-sizing: border-box;
       }
-
       body {
         margin: 0;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         background: var(--bg);
         color: var(--text-color);
       }
-
       .inner {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 16px 24px;
+        padding: 16px 24px 32px;
       }
-
       .page-header {
         background: var(--card-bg);
         box-shadow: var(--shadow);
-        margin-bottom: 24px;
+        padding: 18px 24px 16px;
+        margin: 0 0 24px;
       }
-
       .page-header h1 {
         margin: 0 0 8px;
         font-size: 28px;
       }
-
       .subtitle {
         margin: 0 0 6px;
         color: var(--muted);
       }
-
       .meta {
         margin: 0;
         font-size: 13px;
         color: var(--muted);
       }
-
       .meta a {
         color: var(--accent);
         text-decoration: none;
       }
-
       .page-main {
-        padding-bottom: 40px;
+        margin-bottom: 32px;
       }
-
       .page-footer {
         border-top: 1px solid #e0e0e0;
         background: #fafafa;
       }
-
       .page-footer p {
         margin: 8px 0;
         font-size: 12px;
         color: #888;
+        text-align: center;
+      }
+      /* Dashboard 容器在中间 */
+      #dashboard {
+        background: var(--card-bg);
+        box-shadow: var(--shadow);
+        border-radius: var(--border-radius);
+        padding: 16px 20px 20px;
       }
     </style>
   </head>
 
-<script type="module">
+  <body>
+    <header class="page-header">
+      <div class="inner">
+        <h1>Nutrition Composition Dashboard</h1>
+        <p class="subtitle">
+          Explore calories, protein, fat, and carbohydrates across 335 common foods.
+          Filter by category, calories, and brush the scatterplot to update the nutrient bars.
+        </p>
+        <p class="meta">
+          Dataset:
+          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods" target="_blank" rel="noopener">
+            Nutrition Details for Most Common Foods (Kaggle)
+          </a>
+        </p>
+      </div>
+    </header>
 
-import define from "./index.js";
-import {Runtime, Library, Inspector} from "./runtime.js";
+    <main class="page-main">
+      <div class="inner">
+        <!-- Observable Dashboard 会渲染到这里 -->
+        <div id="dashboard"></div>
+      </div>
+    </main>
 
-const runtime = new Runtime();
-const main = runtime.module(define, Inspector.into(document.body));
+    <footer class="page-footer">
+      <p>Built by Bella Cai for InfoVis Final Project.</p>
+    </footer>
 
-</script>
+    <script type="module" src="./index.js"></script>
+  </body>
+</html>
