--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
         --muted: #666;
         --accent: #2b7fc3;
       }
-      * {
-        box-sizing: border-box;
-      }
+      * { box-sizing: border-box; }
       body {
         margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
         background: var(--bg);
         color: var(--text-color);
       }
@@ -32,48 +30,46 @@
       .page-header {
         background: var(--card-bg);
         box-shadow: var(--shadow);
-        padding: 18px 24px 16px;
         margin: 0 0 24px;
       }
       .page-header h1 {
         margin: 0 0 8px;
         font-size: 28px;
       }
-      .subtitle {
-        margin: 0 0 6px;
-        color: var(--muted);
+      .subtitle { margin: 0 0 4px; color: var(--muted); }
+      .meta { margin: 0 0 8px; font-size: 13px; color: var(--muted); }
+      .meta a { color: var(--accent); text-decoration: none; }
+
+      .panel {
+        background: var(--card-bg);
+        border-radius: var(--border-radius);
+        box-shadow: var(--shadow);
+        padding: 14px 16px 18px;
+        margin-bottom: 20px;
       }
-      .meta {
-        margin: 0;
-        font-size: 13px;
-        color: var(--muted);
+      .panel h2 {
+        margin: 0 0 8px;
+        font-size: 18px;
       }
-      .meta a {
-        color: var(--accent);
-        text-decoration: none;
+
+      .grid {
+        display: grid;
+        grid-template-columns: 1.1fr 1fr;
+        grid-gap: 20px;
+        margin-bottom: 20px;
       }
-      .page-main {
-        margin-bottom: 32px;
-      }
+
       .page-footer {
         border-top: 1px solid #e0e0e0;
         background: #fafafa;
-      }
-      .page-footer p {
-        margin: 8px 0;
+        padding: 6px 12px 10px;
+        text-align: center;
         font-size: 12px;
         color: #888;
-        text-align: center;
-      }
-      /* Dashboard 容器在中间 */
-      #dashboard {
-        background: var(--card-bg);
-        box-shadow: var(--shadow);
-        border-radius: var(--border-radius);
-        padding: 16px 20px 20px;
       }
     </style>
   </head>
+
 
   <body>
     <header class="page-header">
@@ -85,7 +81,8 @@
         </p>
         <p class="meta">
           Dataset:
-          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods" target="_blank" rel="noopener">
+          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods"
+             target="_blank" rel="noopener">
             Nutrition Details for Most Common Foods (Kaggle)
           </a>
         </p>
@@ -94,8 +91,29 @@
 
     <main class="page-main">
       <div class="inner">
-        <!-- Observable Dashboard 会渲染到这里 -->
-        <div id="dashboard"></div>
+        <!-- 过滤控件 -->
+        <section class="panel" id="filters-panel">
+          <h2>Filters</h2>
+          <div id="filters"></div>
+        </section>
+
+        <!-- Treemap + Scatter 两列网格 -->
+        <section class="grid">
+          <div class="panel" id="treemap-panel">
+            <h2>Treemap Overview</h2>
+            <div id="treemap"></div>
+          </div>
+          <div class="panel" id="scatter-panel">
+            <h2>Calories vs Protein Scatterplot</h2>
+            <div id="scatter"></div>
+          </div>
+        </section>
+
+        <!-- Bars 单独占一行 -->
+        <section class="panel" id="bars-panel">
+          <h2>Nutrient Comparison Bars</h2>
+          <div id="bars"></div>
+        </section>
       </div>
     </main>
 
@@ -105,4 +123,5 @@
 
     <script type="module" src="./index.js"></script>
   </body>
+
 </html>
