--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
         background: var(--bg);
         color: var(--text-color);
+        font-size: 14px; 
       }
       .inner {
         max-width: 1200px;
