--- a/index.html
+++ b/index.html
@@ -61,55 +61,74 @@
       }
 
       .page-footer {  /* Filters 区：整体排成两列 —— 左 label / 右控件 */
-  /* Filters 面板整体垂直排列每个条件块 */
+  /* Filters 面板：所有 filter-item 纵向排列 */
   #filters {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 16px;
     margin-top: 8px;
   }
 
-  /* 每一个 filter-item = 一行（Search / Categories / Slider / Toggle） */
   #filters .filter-item {
     display: flex;
     flex-direction: column;
     gap: 4px;
   }
 
-  /* 默认 label 样式 */
   #filters .filter-item label {
     font-size: 13px;
     color: var(--muted);
     font-weight: 500;
   }
 
-  /* Search input 占满宽度 */
-  #filters .filter-item input[type="text"],
-  #filters .filter-item input[type="number"] {
-    max-width: 260px;
-  }
-
-  /* Categories 这一块：多列复选框 */
-  /* 这是第二个 filter-item（Filter categories）内部结构 */
+  /* 第二个 filter-item = Filter categories (optional) → 多列 checkbox */
   #filters .filter-item:nth-child(2) > div {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 4px 12px;
   }
 
-  /* Slider 那一块：让 slider 和数字在一行 */
+  /* 让第 1、3、4 个 filter-item 在同一行排成 3 列 */
+  #filters .filter-item:nth-child(1),
+  #filters .filter-item:nth-child(3),
+  #filters .filter-item:nth-child(4) {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  /* 第 1、3、4 个的左边 label 固定宽度，右侧内容占剩余空间 */
+  #filters .filter-item:nth-child(1) label,
+  #filters .filter-item:nth-child(3) label,
+  #filters .filter-item:nth-child(4) label {
+    width: 240px;           /* 左侧 label 总宽 */
+    margin: 0;
+  }
+
+  #filters .filter-item:nth-child(1) > div,
+  #filters .filter-item:nth-child(3) > div,
+  #filters .filter-item:nth-child(4) > div {
+    flex: 1;
+  }
+
+  /* Search input 稍微窄一点，避免贴右边太多 */
+  #filters .filter-item:nth-child(1) input[type="text"] {
+    max-width: 260px;
+  }
+
+  /* Max calories 那一行：number + slider 内部排成一行 */
   #filters .filter-item:nth-child(3) > div {
     display: inline-flex;
     align-items: center;
     gap: 8px;
   }
 
-  /* Healthy toggle 那一块：label + checkbox 并排 */
+  /* Healthy toggle 那一行：checkbox 在右侧，但不要最靠右 */
   #filters .filter-item:nth-child(4) > div {
     display: inline-flex;
     align-items: center;
     gap: 8px;
   }
+
 
 
         border-top: 1px solid #e0e0e0;
