--- a/index.html
+++ b/index.html
@@ -15,31 +15,51 @@
         --muted: #666;
         --accent: #2b7fc3;
       }
-      * { box-sizing: border-box; }
+
+      * {
+        box-sizing: border-box;
+      }
+
       body {
         margin: 0;
-        font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         background: var(--bg);
         color: var(--text-color);
-        font-size: 14px; 
+        font-size: 14px;
       }
+
       .inner {
         max-width: 1200px;
         margin: 0 auto;
         padding: 16px 24px 32px;
       }
+
       .page-header {
         background: var(--card-bg);
         box-shadow: var(--shadow);
         margin: 0 0 24px;
       }
+
       .page-header h1 {
         margin: 0 0 8px;
         font-size: 28px;
       }
-      .subtitle { margin: 0 0 4px; color: var(--muted); }
-      .meta { margin: 0 0 8px; font-size: 13px; color: var(--muted); }
-      .meta a { color: var(--accent); text-decoration: none; }
+
+      .subtitle {
+        margin: 0 0 4px;
+        color: var(--muted);
+      }
+
+      .meta {
+        margin: 0 0 8px;
+        font-size: 13px;
+        color: var(--muted);
+      }
+
+      .meta a {
+        color: var(--accent);
+        text-decoration: none;
+      }
 
       .panel {
         background: var(--card-bg);
@@ -48,6 +68,7 @@
         padding: 14px 16px 18px;
         margin-bottom: 20px;
       }
+
       .panel h2 {
         margin: 0 0 8px;
         font-size: 18px;
@@ -60,77 +81,7 @@
         margin-bottom: 20px;
       }
 
-      .page-footer {  /* Filters 区：整体排成两列 —— 左 label / 右控件 */
-  /* Filters 面板：所有 filter-item 纵向排列 */
-  #filters {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-top: 8px;
-  }
-
-  #filters .filter-item {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-
-  #filters .filter-item label {
-    font-size: 13px;
-    color: var(--muted);
-    font-weight: 500;
-  }
-
-  /* 第二个 filter-item = Filter categories (optional) → 多列 checkbox */
-  #filters .filter-item:nth-child(2) > div {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 4px 12px;
-  }
-
-  /* 让第 1、3、4 个 filter-item 在同一行排成 3 列 */
-  #filters .filter-item:nth-child(1),
-  #filters .filter-item:nth-child(3),
-  #filters .filter-item:nth-child(4) {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  /* 第 1、3、4 个的左边 label 固定宽度，右侧内容占剩余空间 */
-  #filters .filter-item:nth-child(1) label,
-  #filters .filter-item:nth-child(3) label,
-  #filters .filter-item:nth-child(4) label {
-    width: 240px;           /* 左侧 label 总宽 */
-    margin: 0;
-  }
-
-  #filters .filter-item:nth-child(1) > div,
-  #filters .filter-item:nth-child(3) > div,
-  #filters .filter-item:nth-child(4) > div {
-    flex: 1;
-  }
-
-  /* Search input 稍微窄一点，避免贴右边太多 */
-  #filters .filter-item:nth-child(1) input[type="text"] {
-    max-width: 260px;
-  }
-
-  /* Max calories 那一行：number + slider 内部排成一行 */
-  #filters .filter-item:nth-child(3) > div {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  /* Healthy toggle 那一行：checkbox 在右侧，但不要最靠右 */
-  #filters .filter-item:nth-child(4) > div {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-
-
+      .page-footer {
         border-top: 1px solid #e0e0e0;
         background: #fafafa;
         padding: 6px 12px 10px;
@@ -138,30 +89,66 @@
         font-size: 12px;
         color: #888;
       }
-      /* Filters 容器：一行多列、自适应换行 */
+
+      /* ============ Filters layout ============ */
+
+      /* Filters 面板：所有 filter-item 竖直排列，块与块之间留间距 */
       #filters {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 12px 16px;    /* 竖向 12px，横向 16px 间距 */
-      align-items: flex-end;
-      margin-top: 4px;
-    }
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        margin-top: 8px;
+      }
 
-    /* 每个单独的 filter item */
-    #filters .filter-item {
-      padding: 4px 6px;
-    }
+      #filters .filter-item {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
 
-    /* 让控件 label 和 input 排版更紧凑一点（Inputs 默认生成 label） */
-    #filters .filter-item label {
-      font-size: 13px;
-      color: var(--muted);
-      display: block;
-      margin-bottom: 4px;
-    }
+      #filters .filter-item label {
+        font-size: 13px;
+        color: var(--muted);
+        font-weight: 500;
+      }
+
+      /* 第 1 个 filter-item：Search food name */
+      #filters .filter-item:nth-child(1) input[type="text"] {
+        max-width: 260px;
+      }
+
+      /* 第 2 个：Filter categories (optional) → 多列 checkbox */
+      #filters .filter-item:nth-child(2) > div {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        gap: 4px 12px;
+      }
+
+      /* 第 3 个：Max calories per serving → number + slider 一行 */
+      #filters .filter-item:nth-child(3) > div {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      /* 第 4 个：Healthy toggle → label 在上，checkbox 在下（你要求从上到下结构） */
+      #filters .filter-item:nth-child(4) {
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+      }
+
+      #filters .filter-item:nth-child(4) label {
+        margin-right: 8px;
+      }
+
+      #filters .filter-item:nth-child(4) > div {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+      }
     </style>
   </head>
-
 
   <body>
     <header class="page-header">
@@ -173,8 +160,11 @@
         </p>
         <p class="meta">
           Dataset:
-          <a href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods"
-             target="_blank" rel="noopener">
+          <a
+            href="https://www.kaggle.com/datasets/niharika41298/nutrition-details-for-most-common-foods"
+            target="_blank"
+            rel="noopener"
+          >
             Nutrition Details for Most Common Foods (Kaggle)
           </a>
         </p>
@@ -183,7 +173,7 @@
 
     <main class="page-main">
       <div class="inner">
-        <!-- 过滤控件 -->
+        <!-- Filters 面板 -->
         <section class="panel" id="filters-panel">
           <h2>Filters</h2>
           <div id="filters"></div>
@@ -215,5 +205,5 @@
 
     <script type="module" src="./index.js"></script>
   </body>
-
 </html>
+
