--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
       body {
         margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          sans-serif;
         background: var(--bg);
         color: var(--text-color);
         font-size: 14px;
@@ -74,13 +75,6 @@
         font-size: 18px;
       }
 
-      .grid {
-        display: grid;
-        grid-template-columns: 1.1fr 1fr;
-        grid-gap: 20px;
-        margin-bottom: 20px;
-      }
-
       .page-footer {
         border-top: 1px solid #e0e0e0;
         background: #fafafa;
@@ -112,36 +106,26 @@
         font-weight: 500;
       }
 
-      /* 第 1 个 filter-item：Search food name */
+      /* Search food name */
       #filters .filter-item:nth-child(1) input[type="text"] {
         max-width: 260px;
       }
 
-      /* 第 2 个：Filter categories (optional) → 多列 checkbox */
+      /* Filter categories (optional) → 多列 checkbox */
       #filters .filter-item:nth-child(2) > div {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         gap: 4px 12px;
       }
 
-      /* 第 3 个：Max calories per serving → number + slider 一行 */
+      /* Max calories per serving: number + slider 一行 */
       #filters .filter-item:nth-child(3) > div {
         display: inline-flex;
         align-items: center;
         gap: 8px;
       }
 
-      /* 第 4 个：Healthy toggle → label 在上，checkbox 在下（你要求从上到下结构） */
-      #filters .filter-item:nth-child(4) {
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-start;
-      }
-
-      #filters .filter-item:nth-child(4) label {
-        margin-right: 8px;
-      }
-
+      /* Healthy toggle：label + checkbox 一行 */
       #filters .filter-item:nth-child(4) > div {
         display: inline-flex;
         align-items: center;
@@ -155,8 +139,9 @@
       <div class="inner">
         <h1>Nutrition Composition Dashboard</h1>
         <p class="subtitle">
-          Explore calories, protein, fat, and carbohydrates across 335 common foods.
-          Filter by category, calories, and brush the scatterplot to update the nutrient bars.
+          Explore calories, protein, fat, and carbohydrates across 335 common
+          foods. Filter by category, calories, and brush the scatterplot to
+          update the nutrient bars.
         </p>
         <p class="meta">
           Dataset:
@@ -179,16 +164,16 @@
           <div id="filters"></div>
         </section>
 
-        <!-- Treemap + Scatter 两列网格 -->
-        <section class="grid">
-          <div class="panel" id="treemap-panel">
-            <h2>Treemap Overview</h2>
-            <div id="treemap"></div>
-          </div>
-          <div class="panel" id="scatter-panel">
-            <h2>Calories vs Protein Scatterplot</h2>
-            <div id="scatter"></div>
-          </div>
+        <!-- Treemap 占一整行 -->
+        <section class="panel" id="treemap-panel">
+          <h2>Treemap Overview</h2>
+          <div id="treemap"></div>
+        </section>
+
+        <!-- Scatterplot 放在 Treemap 下面 -->
+        <section class="panel" id="scatter-panel">
+          <h2>Calories vs Protein Scatterplot</h2>
+          <div id="scatter"></div>
         </section>
 
         <!-- Bars 单独占一行 -->
@@ -206,4 +191,5 @@
     <script type="module" src="./index.js"></script>
   </body>
 </html>
+
 
